dark mode fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -405,6 +405,7 @@ input[type="range"] {
 .signature {
 /*     display: none; */
     position: fixed;
+    top: 0;
     width: 100vw;
     height: 100%;
     Overflow: hidden;
@@ -555,7 +556,13 @@ button.commencer {
 */
 
 @media (prefers-color-scheme: dark) {
-
+    .controls button {
+        color: white;
+    }
+    button.commencer {
+        background-color: white;
+        color: var(--text);
+    }
 }
 
 
@@ -690,7 +697,7 @@ button.commencer {
     }
     .controls button {
         padding: 0.6em 0.5em;
-        color: var(--text) !important;
+        color: var(--text);
     }
     .player h2 {
         top: 1.8rem;
